--- a/index.html
+++ b/index.html
@@ -411,18 +411,14 @@
                 <div class="mb-5">
                   <strong>UConn School of Engineering Undergraduate Teaching Assistant
                   <br><i>Computer Science and Engineering; Digital Logic Design</i></strong>
-                  <ul style = "list-style-position:inside;">
-                    <li>Instruct labs sections of approximately 25 students each.</li>
-                    <li>Assist and manage student learning in both hardware and software implementations of Digital Logic Design.</li>
-                  </ul>
+                    <br>• Instruct labs sections of approximately 25 students each.</li>
+                    <br>• Assist and manage student learning in both hardware and software implementations of Digital Logic Design.</li>
                 </div>
                 <div class="mb-5"><strong>UConn Information Technology Services; <i>Specialist Shop Technician, Knowledge Base Team Member</i></strong>
-                  <ul style = "list-style-position:inside;">
-                    <li>Troubleshoot and resolve hardware, software, and networking issues by working directly with university students and faculty 
+                    <br>• Troubleshoot and resolve hardware, software, and networking issues by working directly with university students and faculty 
                     and providing them with prompt and effective solutions.
-                    <li>Create strategic plan with knowledge base team members to successfully migrate over 1,000 knowledge base
+                    <br>• Create strategic plan with knowledge base team members to successfully migrate over 1,000 knowledge base
                     articles onto new web client.
-                  </ul> 
                 </div>
                 <p>
                   <strong>Licenses and Certifications</strong>
@@ -588,13 +584,10 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Leadership.png" alt="Leadership" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <div class="mb-5">
-                  <div>
                   <strong>C.S.E. Undergratuate Teaching Assistant; <i>Digital Logic Design</i></strong>
-                  <ul style = "list-style-position:inside;">
-                    <li>Instruct labs sections of approximately 25 students each.</li>
-                    <li>Assist and manage student learning in both hardware and software implementations of Digital Logic Design.</li>
-                  </ul>
-                  </div>
+                    <br>• Instruct labs sections of approximately 25 students each.</li>
+                    <br>• Assist and manage student learning in both hardware and software implementations of Digital Logic Design.</li>
+                  <br><br>
                   <strong>Upsilon Pi Epsilon; <i>Treasurer</i></strong>
                   <br>Manage all funds for the UConn Chapter of UPE.
                   <br><br>
