--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 </div>
                 <p>
                   <strong>Licenses and Certifications</strong>
-                  <br>IBM Master the Mainframe 2019 - Part 2, Architecting with Google Compute Engine Specialization, Elastic Cloud Infrastructure: Scaling and Automation,
+                  <br>IBM Master the Mainframe 2019 (Parts 1 - 3), Architecting with Google Compute Engine Specialization, Elastic Cloud Infrastructure: Scaling and Automation,
                   Reliable Cloud Infrastructure: Design and Process, Essential Cloud Infrastructure: Core Services, Essential Cloud Infrastructure: Foundation, 
                   Google Cloud Platform Fundamentals: Core Infrastructure
                 </p>
@@ -543,7 +543,7 @@
                   <br>Innovation House enables students to access, and leverage campus resources and networks during their personal exploration of creativity, innovation, and entrepreneurship.
                   <br><br>
                   <strong>Volunteer Service</strong>
-                  <br>UConn STEM Night, Northeast Science Bowl, UConn Open House - Engineering
+                  <br>UPE Computer Science and Engineering Tutor, UConn STEM Night, Northeast Science Bowl, UConn Open House - Engineering
                 </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
@@ -590,6 +590,12 @@
                   <br><br>
                   <strong>Upsilon Pi Epsilon; <i>Treasurer</i></strong>
                   <br>Manage all funds for the UConn Chapter of UPE.
+                  <br><br>
+                  <strong>Upsilon Pi Epsilon; <i>Computer Science and Engineering Tutor</i></strong>
+                  <br>Tutor students seeking help for Computer Science and Engineering coursework including but not limited to 
+                  Intro Computing for Engineers, Principles of Programming, Digital Logic Design, Data Structures and Object 
+                  Oriented Programming, Introduction to Discrete Systems, Systems Programming, Algorithms and Complexity, and Introduction 
+                  to Computer Architecture.
                   <br><br>
                   <strong>UConn Innovation House; <i>Floor Mentor</i></strong>
                   <br>Work and collaborate with fellow leaders and residents in order to stimulate 
