--- a/index.html
+++ b/index.html
@@ -191,10 +191,19 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Michael is an undergraduate student at the University of Connecticut working towards completing his Bachelor of Science in Engineering for Computer Science and Engineering. Michael will be concentrating in Software Development and Design, and is concurrently working to complete his minor in Mathematics.</p>
+          <p class="lead">Michael is an undergraduate student at the University of 
+            Connecticut working towards completing his Bachelor of Science in 
+            Engineering for Computer Science and Engineering. Michael will be 
+            concentrating in Computational Data Analytics, and is concurrently 
+            working to complete his minor in Mathematics.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Michael has a great interest for the application of computation to everyday life, as well as the application of mathematics and sciences involved within the field. Michael's involvement has helped to solifify his software, hardware, and problem solving skills, as well as having been acknowledged for his contributions.</p>
+          <p class="lead">Michael has a great interest for the application of 
+            computation to everyday life, as well as the application of mathematics 
+            and sciences involved within the field. Michael's involvement has 
+            helped to solifify his software, hardware, and problem solving skills, 
+            in addition to being acknowledged for his contributions in development
+            projects.</p>
         </div>
       </div>
 
@@ -360,11 +369,11 @@
                       <br>Elementary Differential Equations
                       <br>Applied Linear Algebra
                       <br>Probability
-                      <br>Data Structures and Object Oriented Programming
                       <br>Digital Logic Design
-                      <br>Systems Programming
-                      <br>Algorithms and Complexity
-                      <br>Introduction to Computer Architecture
+                      <br>Introduction to Software Engineering
+                      <br>Probabilistic Performance Analysis
+                      <br>Introduction to Machine Learning
+                      <br>Principles of Databases
                       <span style = "opacity: 0.5">
                       
                       </span>
@@ -465,6 +474,9 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Honors.png" alt="Honors and Awards" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
+                  <strong>IEEE Eta Kappa Nu; <i>Honor Society for Computer and Electrical Engineers</i></strong>
+                  <br>IEEE-Eta Kappa Nu (IEEE-HKN), the honor society of IEEE, promotes excellence in the profession and in education with ideals of Scholarship, Character and Attitude.
+                  <br><br>
                   <strong>2019 New England Scholar</strong>
                   <br>Semester grade point average of at least a 3.7 for the spring and fall semesters of the 2019 calendar year.
                   <br><br>
@@ -480,7 +492,7 @@
                   <br><br>
                   <strong>HackUMass VII; <i>Wolfram Award</i></strong>
                   <br><br>
-                  <strong>Upsilon Pi Epsilon; <i>Honors Computing Society</i></strong>
+                  <strong>Upsilon Pi Epsilon; <i>Honor Society for Computer Science</i></strong>
                   <br>Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.
                   <br><br>
                   <strong>Deans List Engineering</strong>
@@ -528,10 +540,16 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/Involvement.png" alt="Involvement" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
+                  <strong>IEEE Eta Kappa Nu; <i>Member</i></strong>
+                  <br>IEEE-Eta Kappa Nu (IEEE-HKN), the honor society of IEEE, promotes excellence in the profession and in education with ideals of Scholarship, Character and Attitude.
+                  <br><br>
+                  <strong>IEEE; <i>Member</i></strong>
+                  <br>IEEE organizes and promotes academic, professional and social functions for the Electrical and Computer Engineering, Computer Science, and Engineering student body.
+                  <br><br>
                   <strong>Upsilon Pi Epsilon; <i>Treasurer/CFO</i></strong>
                   <br>Upsilon Pi Epsilon promotes the computing and information disciplines and encourages their contribution to the enhancement of knowledge.
                   <br><br>
-                  <strong>UConn Association for Computing Machinery; <i>Deep Learning Project Member</i></strong> 
+                  <strong>UConn Association for Computing Machinery; <i>Mobile Application Project Member</i></strong> 
                   <br>The ACM chapter at the University of Connecticut provides a voice for student concerns about computer-related 
                   issues and a venue for educational enrichment.
                   <br><br>
@@ -640,6 +658,9 @@
                 <img class="img-fluid rounded mb-5" src="img/portfolio/IMG_2088.JPG" alt="HackUMass VII Team P4GTL" style = "margin-left: auto; margin-right: auto;">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">
+                  <strong>UConn ACM; <i>Mobile Application Project</i></strong>
+                  <br>Built mobile and desktop application frameworks utilizing React Native, Electron.js, Express.js, Robot.js, and more. Project details and release TBA.
+                  <br><br>
                   <a style="color:black" href="https://p4gtl.herokuapp.com/">
                   <strong>HackUMass VII; <i>¡Please 4Get the Lyrics! - Front End Developer</i></strong>
                   </a>
