June 2020 Phase 1 Mobile Fix

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                   <br>GPA: 3.732/4.0
                 </div>
                 <div class="mb-5">
-                  <br><b><i style="text-decoration: underline;">Relevant Coursework:</i></b> Principles of Databases,
+                  <b><i style="text-decoration: underline;">Relevant Coursework:</i></b> Principles of Databases,
                   Machine Learning,
                   Intoduction to Software Engineering,
                   Probabilistic Performance Analysis of Computer Systems,
