Font Awesome and Icon Updates

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
+  <!-- Custom development fonts from https://konpa.github.io/devicon/ -->
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
   <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
 
@@ -64,13 +67,25 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fab fa-python"></i>
+          <i class="fas fa-code"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
 
       <!-- Masthead Subheading -->
       <p class="masthead-subheading font-weight-light mb-0">Developer - Engineer - Logician</p>
+
+      <div class="masthead-subheading font-weight-light mb-0">
+        <i class="fab fa-python"></i>
+        <i class="devicon-java-plain-wordmark"></i>
+        <i class="devicon-c-plain"></i>
+        <i class="devicon-mysql-plain"></i>
+        <i class="devicon-nodejs-plain-wordmark"></i>
+        <i class="devicon-git-plain"></i>
+        <i class="devicon-html5-plain-wordmark"></i>
+        <i class="devicon-css3-plain-wordmark"></i>
+        <i class="devicon-javascript-plain"></i>
+      </div>
 
     </div>
   </header>
@@ -408,7 +423,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-memory"></i>
+                    <i class="fas fa-briefcase"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -476,7 +491,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-microchip"></i>
+                    <i class="fas fa-award"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -563,7 +578,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-hdd"></i>
+                    <i class="fas fa-hands-helping"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -643,7 +658,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-lightbulb"></i>
+                    <i class="fas fa-user-tie"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -730,7 +745,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-cogs"></i>
+                    <i class="fas fa-project-diagram"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
