--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
                 </div>
                 <div class="mb-2">
                   <b>UConn Innovation House Learning Community</b>
-                  <br><i>Floor Mentor (May 2020 - Present)</i>
+                  <br><i>Floor Mentor (Aug. 2018 - May 2019)</i>
                   <ul>
                     <li>Collaborated with fellow leaders and residents in order to stimulate community bonding by planning events for a floor of 80 residents, resulting in an 18% increase in engagement from the previous year.</li>
                   </ul>
